--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "mui": "^0.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
